--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Mobs do Minecraft</h1>
+            <h1>Minecraft</h1>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=MmB9b5njVbA"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -27,10 +27,10 @@
     </section>
 
     <section class="categoria">
-        <h2>Filmes e séries</h2>
+        <h2>Monstros principais</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=GowvWHY9V2E>
+                <img src="https://img.youtube.com/vi/GowvWHY9V2E/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
