--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 </head>
 
 <body>
-    <header>Minecraft</header>
+    <header>RENATO GRANEMANN DE SOUZA</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Minecraft</h1>
+            <h1>MINECRAFT</h1>
+            <p>#ideias de construções</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=MmB9b5njVbA"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/AJzxW3vpYuc"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -27,23 +28,23 @@
     </section>
 
     <section class="categoria">
-        <h2>Monstros principais</h2>
+        <h2>Seeds de mundos</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=GowvWHY9V2E>
-                <img src="https://img.youtube.com/vi/GowvWHY9V2E/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/embed/LUMMOkJtYTA">
+                <img src="https://img.youtube.com/vi/LUMMOkJtYTA/maxresdefault.jpg" />
+                <hr>
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/embed/odlMsXn-v98">
+                <img src="https://img.youtube.com/vi/odlMsXn-v98/maxresdefault.jpg" />
+                <hr>
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/embed/Hi0apuYgByo">
+                <img src="https://img.youtube.com/vi/Hi0apuYgByo/maxresdefault.jpg" />
+                <hr>
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
-            </a>
+            <a href="https://www.youtube.com/embed/NYVubHLc5Yc">
+                <img src="https://img.youtube.com/vi/NYVubHLc5Yc/maxresdefault.jpg" />
+                <hr>
         </div>
     </section>
 
